--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-.popup{
-animation: popUp .4s 
+.popup {
+  animation: popUp .4s
 }
+
 @keyframes popUp {
-    from {
-        opacity: 0;
-        top: 70px;
-      }
-    
-      to {
-        opacity: 1;
-        top: -48px;
-      }
+  from {
+    opacity: 0;
+    top: 70px;
+  }
+
+  to {
+    opacity: 1;
+    top: -48px;
+  }
+}
+
+.accordionOpen {
+  animation: accordion 1s;
+}
+
+@keyframes accordion {
+  from {
+      max-height: 0px;
+  }
+  to {
+      max-height: 1000px;
+  }
+}
+#dBoardSideber nav .active {
+  background: rgb(234, 242, 248);
 }
