--- a/src/Pages/Services/ServiceList/Css/ServiceListCss.css
+++ b/src/Pages/Services/ServiceList/Css/ServiceListCss.css
@@ -1,7 +1,6 @@
 .p-datatable th {
     text-align: center !important;
 }
-
 .p-datatable .p-column-header-content {
     display: block !important;
     align-items: center !important;
@@ -16,10 +15,11 @@
     font-weight: medium;
 
 }
-
 .close-button:hover {
     color: black;
-    
-    
-    /* Change to whatever color you want on hover */
 }
+
+
+ input{
+    font-size:65%;
+ }
