--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Example CSS to customize React Quill toolbar */
+
+
+
+/* Add more CSS rules to customize other parts of the editor */
 
 .HideTextAnimation {
   animation: HideTextAnimation 1s;
@@ -68,7 +73,34 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+/* sideber transition  */
+.transitionAnimationopen{
+  transition: 1s;
+}
+.transitionAnimationclose{
+  transition: .2s;
+}
+/* text editor css  */
+.darkThemeActivate .ql-toolbar {
+  background-color: #6B7280; 
+  border: none; 
+}
+.darkThemeActivate .ql-toolbar{
+  border: none !important;
+  border-radius: 4px 4px 0 0 ;
+}
+.darkThemeActivate .ql-container {
+  border-radius: 4px;
+  border: none !important;
+}
+.ql-container{
+  min-height: 200px;
+  
+}
 
+.darkThemeActivate .ql-toolbar .ql-picker-label {
+  color: #333; 
+}
 /* animations  */
 /* accordionOpen animations */
 
