--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,6 @@
   animation: NavberwidhtAnimationOpen 1s;
 }
 
-
-
 .accordionOpen {
   animation: accordionopen 2s;
 }
@@ -147,7 +145,35 @@ animation: ThemeChangerTogglerClose 1s;
 .ThemeChangerTogglerOpen{
   animation: ThemeChangerTogglerOpen .5s;
 }
+#dropDowns {
+  transition: .5s ease all;
+}
+#dropDowns2 {
+  transition: .5s ease all;
+}
+#dropDownButton:hover #dropDowns{
+  animation: HoverAnimation 1s;
+  top: 38px;
+  display: block;
+}
+#dropDownButton:hover #dropDowns2{
+  animation: HoverAnimation 1s;
+  top: 38px;
+  display: block;
+}
 /* animations  */
+@keyframes HoverAnimation {
+  from {
+    /* top: -999px; */
+    opacity: 0;
+    max-height: 0px;
+  }
+
+  to {
+    opacity: 1;
+    max-height: 700px;
+  }
+}
 /* accordionOpen animations */
 @keyframes ThemeChangerTogglerOpen {
   from {
