--- a/src/index.css
+++ b/src/index.css
@@ -155,9 +155,19 @@ animation: ThemeChangerTogglerClose 1s;
   animation: HoverAnimation 1s;
   top: 38px;
   display: block;
+  z-index: 1000;
 }
 #dropDownButton2:hover #dropDowns2{
-
+  animation: HoverAnimation 1s;
+  top: 0px;
+  display: block;
+  z-index: 1000;
+}
+#dropDownButton3:hover #dropDowns3{
+  animation: HoverAnimation 1s;
+  top: 0px;
+  display: block;
+  z-index: 1000;
 }
 
 @keyframes HoverAnimation {
@@ -172,6 +182,7 @@ animation: ThemeChangerTogglerClose 1s;
     max-height: 700px;
   }
 }
+
 /* accordionOpen animations */
 @keyframes ThemeChangerTogglerOpen {
   from {
